--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -125,9 +125,9 @@
     description={TODO: The cache of the client, in which he rememers target nodes from the management}
 }
 
-\newglossaryentry{state}
+\newglossaryentry{node-state}
 {
-    name={state},
+    name={Node State},
     description={TODO: Also link the state attachment}
 }
 
