Address issues discussed in PR#30

--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -32,7 +32,7 @@ An \gls{administrator} wants to interact with the \gls{system} as less as possib
 \paragraph{Responsibilities}
 \begin{itemize}
     \item Instruct the \gls{management} to add/remove \glspl{node} from the \gls{system}
-    \item Ensure that the \gls{management} runs properly (i.e. monitor it)
+    \item Ensure that the \gls{management} runs properly (e.g. monitor it)
     \item Act if the \gls{management} notifies him/her about any anomalies
 \end{itemize}
 
@@ -89,7 +89,7 @@ An \gls{administrator} wants to interact with the \gls{system} as less as possib
 \end{figure}
 
 \begin{itemize}
-    \item A \gls{node} is identified by its unique \gls{node-identifier}. It listens on a certain \emph{IP-Address} and \emph{Port}.
+    \item A \gls{node} is identified by its unique \gls{node-identifier}. It can be addressed using a certain \emph{Address} and \emph{Port}.
     \item A \gls{node} is also associated with a \gls{location} which will be a replication criteria in the future.
     \item A \gls{node} knows the \gls{management} by configuration and exchanges data with it on a regular basis (Messages \emph{get nodes metadata} and \emph{post nodes metadata})
     \item A \gls{node} is in a given \gls{node-state} and acts differently depending on it (See Figure \ref{fig:node-states}).
