--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -136,3 +136,14 @@
     name={medium},
     description={TODO: This is the storage medium, usually a hdd}
 }
+
+\newglossaryentry{message}
+{
+    name={message},
+    description={TODO}
+}
+\newglossaryentry{envelope}
+{
+    name={envelope},
+    description={TODO}
+}
