--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -86,7 +86,7 @@ on the topic of the \textbf{backup software}, \ldots{}
 	\item	I don't want to perform updates manually.
 \end{enumerate}
 
-\subsection{Intentions an Administrator}
+\subsection{Intentions of an Administrator}
 
 As an administrator, \ldots{}
 
