--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -439,8 +439,8 @@ The redundancy is temporary reduced to the \glspl{node} which the group of old \
 \subsubsection{Envelopes}
 An \gls{envelope} is a wrapper for a \gls{message}, which provides standardised attributes.
 
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         timestamp\_now
             & The current UTC time of the local clock as a unix timestamp.  \\
         message\_type
@@ -460,17 +460,17 @@ The \gls{message} is empty.
 \subsubsection{return target nodes}
 The \glspl{management} response to the \glspl{client} request \emph{get target nodes}.
 
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         target\_nodes
-            & A list of possible \emph{target nodes} as described in Table \ref{tab:message-return-target-nodes-field-target-nodes}. The list is sorted in descending order by preference, defined by the \gls{management}.
+            & A list of possible \emph{target nodes} as defined in Table \ref{tab:message-return-target-nodes-field-target-nodes}. The list is sorted in descending order by preference, defined by the \gls{management}.
     \end{tabu}
     \caption[\emph{return target nodes} Structure]{Structure of a \emph{return target nodes} \Gls{message}.}
     \label{tab:message-return-target-nodes}
 \end{table}
 
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         hostname
             & Hostname of the \gls{node}. \\
         ip\_address
@@ -483,14 +483,12 @@ The \glspl{management} response to the \glspl{client} request \emph{get target n
 \end{table}
 
 \subsubsection{get designation}
-With a \emph{get designation}, a \gls{client} requests the permit to create backup onto an \gls{node}.
-
-The information sent with this request permit the \gls{node} to decide, whether or not it wants to receive a possible backup.
+A \gls{client} requests the permit to create backup onto an \gls{node}. The information sent with this request permit the \gls{node} to decide, whether or not it wants to receive a possible backup.
 
 The client expects a \emph{return designation} \gls{message} in return.
 
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         client\_id
             & Unique identifier of the \gls{client} \\
         estimate\_size
@@ -504,8 +502,8 @@ The client expects a \emph{return designation} \gls{message} in return.
 
 \subsubsection{return designation}
 The \glspl{node} response to the \gls{client} request \emph{get target nodes}.
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         consent
             & Boolean, whether or not the node is ready to receive the backup.
     \end{tabu}
@@ -514,14 +512,14 @@ The \glspl{node} response to the \gls{client} request \emph{get target nodes}.
 \end{table}
 
 \subsubsection{get chunk states}
-With a \emph{get chunk states}, a \gls{client} requests the current availability of \glspl{chunk} on a \gls{node}.
+A \gls{client} queries the current availability of \glspl{chunk} on a \gls{node}.
 
 If the \gls{node} holds a \gls{chunk}, it should update the \gls{expiration-date}, if the transmitted date is further in the future.
 
 The client expects a \emph{return chunk states} \gls{message} in return.
 
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         chunks
             & A list of \glspl{chunk-identifier}. \\
         expiration\_date
@@ -532,17 +530,19 @@ The client expects a \emph{return chunk states} \gls{message} in return.
 \end{table}
 
 \subsubsection{return chunk states}
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+The \glspl{node} response to the \gls{client} request \emph{return chunk states}.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         chunks
-            & A list of \glspl{chunk-identifier}.
+            & A list of \gls{chunk} information as defined in Table \ref{tab:message-return-chunk-states-field-chunks}.
     \end{tabu}
     \caption[\emph{return chunk states} Structure]{Structure of a \emph{return chunk states} \Gls{message}.}
     \label{tab:message-return-chunk-states}
 \end{table}
 
-\begin{table}[h]
-    \begin{tabu}{>{\ttfamily}l X}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
         chunk\_identifier
             & The \gls{chunk-identifier} \\
         root\_handle
@@ -555,23 +555,203 @@ The client expects a \emph{return chunk states} \gls{message} in return.
 \end{table}
 
 \subsubsection{post chunks}
-POST: chunk identifier; chunk data; how long data stored; root handle state
+Send \glspl{chunk-content} to a \gls{node}. This \gls{message} may be sent from a \gls{client} or another \gls{node}.
+
+The sender expects a \emph{acknowledge chunks} \gls{message} in return.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunks
+            & A list of \glspl{chunk} as defined in Table \ref{tab:message-post-chunks-field-chunks}. \\
+        expiration\_date
+            & The \gls{expiration-date} of all \glspl{chunk} in the \texttt{chunks}-field, represented as a unix timestamp in the UTC timezone. \\
+        root\_handle
+            & Boolean, whether or not the chunks in the field \texttt{chunks} are \glspl{root-handle}
+    \end{tabu}
+    \caption[\emph{post chunks} Structure]{Structure of a \emph{post chunks} \Gls{message}.}
+    \label{tab:message-post-chunks}
+\end{table}
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunk\_identifier
+            & The \gls{chunk-identifier} \\
+        chunk\_content
+            & The \glspl{chunk} binary content.
+    \end{tabu}
+    \caption[Field \texttt{chunks} Structure]{Structure of Field \texttt{chunks} as Used in the \emph{post chunks} \Gls{message}.}
+    \label{tab:message-post-chunks-field-chunks}
+\end{table}
+
 \subsubsection{acknowledge chunks}
-ACK: chunk identifier; stored(boolean)
+The \glspl{node} acknowledges, that it received all \glspl{client} \glspl{chunk} from the preceding \emph{post chunks}.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunks
+            & A list of \gls{chunk} information as defined in Table \ref{tab:message-acknowledge-chunks-field-chunks}.
+    \end{tabu}
+    \caption[\emph{acknowledge chunks} Structure]{Structure of a \emph{acknowledge chunks} \Gls{message}.}
+    \label{tab:message-acknowledge-chunks-states}
+\end{table}
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunk\_identifier
+            & The \gls{chunk-identifier} \\
+        stored
+            & Boolean, that denotes if the host has persisted the \gls{chunk}.
+    \end{tabu}
+    \caption[Field \texttt{chunks} Structure]{Structure of Field \texttt{chunks} as Used in the \emph{acknowledge chunks} \Gls{message}.}
+    \label{tab:message-acknowledge-chunks-field-chunks}
+\end{table}
 
 \subsubsection{get chunks}
-GET: chunk identifier
+Request specified \glspl{chunk} from a \gls{node}. This \gls{message} may be sent from a \gls{client} or another \gls{node}.
+
+The sender expects a \emph{return chunks} \gls{message} in return.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunk\_identifiers
+            & A list of \glspl{chunk-identifier}.
+    \end{tabu}
+    \caption[\emph{get chunks} Structure]{Structure of a \emph{get chunks} \Gls{message}.}
+    \label{tab:message-get-chunks}
+\end{table}
+
 \subsubsection{return chunks}
-RETURN: chunk identifier, chunk data; root handle state
+The \gls{node} returns all requested \glspl{chunk} to the enquirer.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunks
+            & A list of \glspl{chunk} as defined in Table \ref{tab:message-return-chunks-field-chunks}. \\
+        expiration\_date
+            & The \gls{expiration-date} of all \glspl{chunk} in the \texttt{chunks}-field, represented as a unix timestamp in the UTC timezone. \\
+        root\_handle
+            & Boolean, whether or not the chunks in the field \texttt{chunks} are \glspl{root-handle}
+    \end{tabu}
+    \caption[\emph{return chunks} Structure]{Structure of a \emph{return chunks} \Gls{message}.}
+    \label{tab:message-return-chunks}
+\end{table}
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunk\_identifier
+            & The \gls{chunk-identifier} \\
+        chunk\_content
+            & The \glspl{chunk} binary content.
+    \end{tabu}
+    \caption[Field \texttt{chunks} Structure]{Structure of Field \texttt{chunks} as Used in the \emph{return chunks} \Gls{message}.}
+    \label{tab:message-return-chunks-field-chunks}
+\end{table}
+
 
 \subsubsection{get root handles}
-GET: userid
+Request specified \glspl{chunk} that are marked as \gls{root-handle} from a \gls{node}. This \gls{message} may be sent from a \gls{client} or another \gls{node}.
+
+The sender expects a \emph{return root handles} \gls{message} in return.
+
+The \emph{get root handles} \gls{message} is empty.
+
+
 \subsubsection{return root handles}
-RETURN: chunk identifier; chunk data
+The \gls{node} returns all requested \gls{root-handle} \glspl{chunk} to the enquirer.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunks
+            & A list of \glspl{chunk} as defined in Table \ref{tab:message-return-root-handles-field-chunks}.
+    \end{tabu}
+    \caption[\emph{return root handles} Structure]{Structure of a \emph{return root handles} \Gls{message}.}
+    \label{tab:message-return-root-handles}
+\end{table}
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        chunk\_identifier
+            & The \gls{chunk-identifier} \\
+        chunk\_content
+            & The \glspl{chunk} binary content. \\
+        expiration\_date
+            & The \gls{expiration-date} represented as a unix timestamp in the UTC timezone.
+    \end{tabu}
+    \caption[Field \texttt{chunks} Structure]{Structure of Field \texttt{chunks} as Used in the \emph{return root handles} \Gls{message}.}
+    \label{tab:message-return-root-handles-field-chunks}
+\end{table}
+
 
 \subsubsection{get nodes metadata}
+A \gls{node} requests \gls{metadata} about all \glspl{node} from the \gls{management}.
+
+The \gls{message} is empty.
+
 \subsubsection{post nodes metadata}
-POST: current local node metadata(identifier; state; redundancy status; free storage; capacity); current "neightbour" status(identifier;state)
+A \gls{node} sends \gls{metadata} about itself and other nodes \glspl{node} to the \gls{management} and requests updated \gls{metadata} from the \gls{management}.
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        current\_node
+            & \Gls{metadata} of the current \gls{node}, see Table \ref{tab:message-post-nodes-metadata-field-current-node} \\
+        other\_nodes
+            & \Gls{metadata}-list of other \glspl{node} in the \gls{system}, see Table \ref{tab:message-post-nodes-metadata-field-other-nodes}
+    \end{tabu}
+    \caption[\emph{post nodes metadata} Structure]{Structure of a \emph{post nodes metadata} \Gls{message}.}
+    \label{tab:message-post-nodes-metadata}
+\end{table}
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        identifier
+            & The \gls{node-identifier} \\
+        state
+            & The local \glspl{node-state} \\
+        storage\_used
+            & Free \gls{storage} in \emph{bytes}. \\
+        storage\_total
+            & Total \gls{storage} capacity in \emph{bytes}.
+    \end{tabu}
+    \caption[Field \texttt{current\_node} Structure]{Structure of Field \texttt{current\_node} as Used in the \emph{post nodes metadata} \Gls{message}.}
+    \label{tab:message-post-nodes-metadata-field-current-node}
+\end{table}
+
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        identifier
+            & The \gls{node-identifier} \\
+        state
+            & The local \glspl{node-state}
+    \end{tabu}
+    \caption[Field \texttt{other\_nodes} Structure]{Structure of Field \texttt{other\_nodes} as Used in the \emph{post nodes metadata} \Gls{message}.}
+    \label{tab:message-post-nodes-metadata-field-other-nodes}
+\end{table}
+
+
 \subsubsection{return nodes metadata}
+The \glspl{management} response to the \gls{node} request \emph{get nodes metadata} and \emph{post nodes metadata}.
+
 RETURN list of (node name; node ip; node state; node free storage)
 
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        nodes
+            & \Gls{metadata}-list of all \glspl{node} in the \gls{system}, see Table \ref{tab:message-return-nodes-metadata-field-nodes}
+    \end{tabu}
+    \caption[\emph{return nodes metadata} Structure]{Structure of a \emph{return nodes metadata} \Gls{message}.}
+    \label{tab:message-return-nodes-metadata}
+\end{table}
+\begin{table}[h!]
+    \begin{tabu}{| >{\ttfamily}l | X |}
+        identifier
+            & The \gls{node-identifier} \\
+        address
+            & The \glspl{node} address. \\
+        port
+            & The \glspl{node} port. \\
+        state
+            & The \gls{node-state}.
+    \end{tabu}
+    \caption[Field \texttt{nodes} Structure]{Structure of Field \texttt{nodes} as Used in the \emph{return nodes metadata} \Gls{message}.}
+    \label{tab:message-return-nodes-metadata-field-nodes}
+\end{table}
