--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -190,6 +190,7 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 \renewcommand{\thechapter}{A}
 \include{appendices/requirements}
 \include{appendices/architecture}
+\include{appendices/morphological_box}
 \include{appendices/language-evaluation}
 \include{appendices/testing}
 
