--- a/latex_template.tex
+++ b/latex_template.tex
@@ -62,8 +62,10 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 	\makeglossaries
 	\newacronym[see={[Siehe:]{gls-#3}},#2]{#3}{#4}{#5\glsadd{gls-#3}}
 }
-\renewcommand{\glstextformat}[1]{\textbf{\em #1}}
+\renewcommand{\glstextformat}[1]{\textit{#1}}
 \makeglossaries
+
+\DeclareTextFontCommand{\emph}{\bfseries\em}
 
 %----------------------------------------------------------------------------------------
 %	THESIS INFORMATION
