--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -164,3 +164,10 @@
 	urldate = {2017-10-10},
 	howpublished={\url{https://docs.docker.com/compose/}},
 }
+@ONLINE{borg-data-structures,
+	author = {{The Borg Backup Authors}},
+	title = {{Borg Backup} - Data structures and file formats},
+	year = 2017,
+	urldate = {2017-10-20},
+	howpublished={\url{http://borgbackup.readthedocs.io/en/stable/internals/data-structures.html}},
+}
